[package]
name = "billboard_100"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.13.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
select = "0.5.0"
rspotify = { version = "0.11.5", default-features = false, features = ["cli","client-reqwest", "reqwest-native-tls"] }
tokio = {version = "1.20.0", features = ["macros"]}
env-file-reader = "0.3.0"
